# ramsesGPU

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  README_build  configure.ac  memory_footprint.py
am/: autotroll.am  buildinfo.am  cppcheck.am  cuda.am  cudalt.py  ice.am  pkg-linux.am  pkg-win.am
cmake/: FindCUDAlibs.cmake  FindFFTW.cmake  FindPAPI.cmake  FindPNETCDF.cmake  initBuildType.cmake  preventBuildInSource.cmake  print_target_properties.cmake  readme
data/: Gresho_vortex2d.ini  Keplerian_disk2d.ini  blast2d.ini  blast2d_mpi.ini  falling_bubble_gpu_2d.ini  hydro_sod2d.ini  implode2d.ini  implode2d_mpi.ini  implode3d.ini  implode3d_debug.ini  implode3d_mpi.ini  implode3d_mpi_zslab.ini  implode3d_zslab.ini  jet2d_cpu.ini  jet2d_gpu.ini  jet2d_mhd_mpi_cpu.ini  jet2d_mpi_cpu.ini  jet2d_mpi_gpu.ini  jet3d_cpu.ini  jet3d_gpu.ini  jet3d_mhd_mpi_gpu.ini  jet3d_mpi_gpu.ini  kelvin_helmholtz_cpu_2d.ini  kelvin_helmholtz_cpu_2d_mpi.ini  kelvin_helmholtz_gpu_2d.ini  kelvin_helmholtz_gpu_2d_large.ini  kelvin_helmholtz_gpu_2d_mhd.ini  kelvin_helmholtz_gpu_2d_mhd_mpi.ini  kelvin_helmholtz_gpu_3d.ini  mhd_BrioWu.ini  mhd_currentSheet_2d.ini  mhd_currentSheet_3d.ini  mhd_fieldloop2d.ini  mhd_fieldloop3d.ini  mhd_fieldloop3d_shear.ini  mhd_fieldloop_2d_mpi.ini  mhd_inertialWave_2d.ini  mhd_jet2d.ini  mhd_jet3d.ini  mhd_kelvin_helmholtz_2d.ini  (+24 more)
doc/: Doxyfile.cfg.in  jet2d_godunov.avi  jet2d_kurganov.avi  jet3d_godunov.mpg  main.h  simu.html.in
m4/: acx_prog_search_lib.m4  autotroll.m4  ax_boost_base.m4  ax_boost_filesystem.m4  ax_boost_mpi.m4  ax_build_modes.m4  ax_check_glew.m4  ax_cross_build.m4  ax_cuda.m4  ax_cxx_toolset.m4  ax_declare_module.m4  ax_lib_ccfits.m4  ax_lib_gsoap.m4  (+21 more)
src/: CMakeLists.txt  Makefile.am  euler2d_laxliu.cpp  euler2d_main_glut.cpp  euler_main.cpp  euler_mpi_main.cpp  euler_zslab_main.cpp  euler_zslab_mpi_main.cpp  testRiemannHLLD.cpp  testTrace.cpp  test_euler2d_glut.sh  test_euler2d_qt.sh
src/analysis/: CMakeLists.txt
src/analysis/powerSpectrum/: CMakeLists.txt  Makefile.am  fBm.ini  fft.ini  fft_mpi.cpp  fft_mpi.h  generate_fBm.cpp  pnetcdf_io.cpp  pnetcdf_io.h  powerSpectrumMpi.cpp  projectedDensityMpi.cpp
src/analysis/readSlice/: CMakeLists.txt  Makefile.am  readSlice.cpp
src/analysis/structureFunctions/: CMakeLists.txt  Makefile.am  common_sf.cpp  common_sf.h  generate_fractional_browian_field.py  pnetcdf_io.cpp  pnetcdf_io.h  strucFunc.ini  structureFunctionsMpi.cpp  structureFunctionsMpi_v2.cpp  structureFunctionsMpi_v3.cpp  test_pnetcdf.ini  test_pnetcdf_write.cpp
src/glutGui/: DemoWindow.cpp  DemoWindow.h  GlutMaster.cpp  GlutMaster.h  GlutWindow.cpp  GlutWindow.h  HydroWindow.cpp  HydroWindow.h  README.orig.txt  README.txt  minmax.cuh  palettes.h  pbo.cuh
src/hydro/: Arrays.h  CMakeLists.txt  Forcing_OrnsteinUhlenbeck.cpp  Forcing_OrnsteinUhlenbeck.h  Forcing_OrnsteinUhlenbeck_kernels.cuh  GetPot.h  HydroMpiParameters.cpp  HydroMpiParameters.h  HydroParameters.h  HydroRunBase.cpp  HydroRunBase.h  HydroRunBaseMpi.cpp  HydroRunBaseMpi.h  HydroRunGodunov.cpp  HydroRunGodunov.h  HydroRunGodunovMpi.cpp  HydroRunGodunovMpi.h  HydroRunGodunovZslab.cpp  HydroRunGodunovZslab.h  HydroRunGodunovZslabMpi.cpp  HydroRunGodunovZslabMpi.h  HydroRunKT.cpp  HydroRunKT.h  HydroRunLaxLiu.cpp  HydroRunLaxLiu.h  HydroRunRelaxingTVD.cpp  HydroRunRelaxingTVD.h  MHDRunBase.cpp  MHDRunBase.h  MHDRunGodunov.cpp  MHDRunGodunov.h  MHDRunGodunovMpi.cpp  MHDRunGodunovMpi.h  MHDRunGodunovZslab.cpp  MHDRunGodunovZslab.h  MHDRunGodunovZslabMpi.cpp  MHDRunGodunovZslabMpi.h  Makefile.am  RandomGen.cpp  RandomGen.h  (+82 more)
src/python/fft/: fft_bench.py
src/python/powerSpectrum/: plot_powerSpectrum.py  powerSpectrum.py  powerSpectrum2.pyx  powerSpectrum_bench.py  readme  setup.py
src/python/utils/: convert_netcdf2vtr.py  h5extract.py  read_vti.py  readme
src/python/visu/: Mayavi2RayCast.py  VtkRayCast.py  offscreen_render.py  visu_plane.py
src/qtGui/: CMakeLists.txt
src/qtGui/qtHelloWorld/: CMakeLists.txt  Makefile.am  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
src/qtGui/qtHydro2d/: HydroWidget.cpp  HydroWidget.h  HydroWidgetGpu.cu  HydroWidgetGpu.h  MainWindow.cpp  MainWindow.h  README  main.cpp  minmax.cuh  pbo.cuh
src/utils/: CMakeLists.txt  Makefile.am
src/utils/IO/: Makefile.am  ioConvert.cpp
src/utils/cnpy/: CMakeLists.txt  Makefile.am  README  cnpy.cpp  cnpy.h  cnpy_example.cpp
src/utils/cnpy/zlib/: crc32.c  readme  zconf_cnpy.h  zlib_cnpy.h  zutil_cnpy.h
src/utils/config/: CMakeLists.txt  ConfigMap.cpp  ConfigMap.h  ConfigMapTest.cpp  Makefile.am  readme.txt
src/utils/config/inih/: INIReader.cpp  INIReader.h  INIReaderTest.cpp  ini.c  ini.cpp  ini.h
src/utils/monitoring/: CMakeLists.txt  CudaTimer.h  Makefile.am  PapiInfo.cpp  PapiInfo.h  PapiInfoTest.cpp  Timer.cpp  Timer.h  date.h  measure_time.h
src/utils/mpiUtils/: CMakeLists.txt  ErrorPolling.cpp  ErrorPolling.h  GlobalMpiSession.cpp  GlobalMpiSession.h  Makefile.am  MpiComm.cpp  MpiComm.h  MpiCommCart.cpp  MpiCommCart.h  TestForException.h  common_config.h  mpiEnums.h
test/: CMakeLists.txt  Makefile.am  computeL2relatif.py.in  makeConfigHydro.cpp  plotXsm.py.in  test_run.sh.in
test/mpiBasic/: CMakeLists.txt  Makefile.am  testMpiHello.cpp  testMpiHelloBoost.cpp  testMpiHelloGlobalSession.cpp  testMpiTopology_2D.cpp  testMpiTopology_2D_C_API.cpp  testMpiTopology_2D_Cpp_API.cpp  testMpiTopology_3D_C_API.cpp  testMpiTopology_3D_Cpp_API.cpp  testVtkXMLPImageDataWriter.cpp
test/mpiCuda/: CMakeLists.txt  Makefile.am  testBorderBufferCuda.cu  testBorderBufferCuda2.cu  testHelloMpiCuda.cu
test/mpiHydro/: CMakeLists.txt  Makefile.am  testCopyBorderBuffer.cpp  testCopyBorderBufferShear.cpp  testHydroMpiParameters.cpp  testHydroRunBaseMpi_border.cpp  testMpiBuffer.cpp  testMpiOutputVtk.cpp
test/mpiIO/: dumpMpiInfo.c  submit_job_curie.sh
test/testPoisson/: CMakeLists.txt  Makefile.am  poisson_fft_2d.py  poisson_fft_3d.py  testPoissonCpuFFTW2d.cpp  testPoissonCpuFFTW3d.cpp  testPoissonGpuCuFFT2d.cu  testPoissonGpuCuFFT3d.cu
(+14 files in other folders)
